# Logger

./: .gitignore  CMakeLists.txt  GlobalLogger.hpp  Logger.cpp  Logger.hpp  Makefile  README.md  With_Color.txt  Without_Color.txt  test.cpp  test.txt  test2.cpp
src/: Logger.cpp  Logger.hpp
